test/fails/bad_generics/tags3.lgl
tag a is vec2;
tag b is vec2;
tag c is b;
tag d is b;
tag e is c;

// Note that, as before, bounds just increase the strictness of the operation
b as_b<`t : c>(`t x) {
    return x;
}

void main() {
    b fail = as_b<b>([1., 2.]);
}